Personalização da Tab1 e cores CSS

--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,16 +1,17 @@
 <ion-header [translucent]="true">
-  <ion-toolbar>
+  <ion-toolbar color="dark">
     <ion-title>
-      Tab 1
+      Vídeos App
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 1</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content [fullscreen]="true" color="light">
+
+  <img src="https://avatars.githubusercontent.com/u/63505852?v=4" alt="Logo HB">
+
+  <h1>Hélio Brandão</h1>
+  <p>Estudando Engenharia de Computação na Univesp/SP</p>
+  <a href="mailto:2012300@aluno.univesp.br">2012300@aluno.univesp.br</a>
 
 </ion-content>
